--- a/resources/assets/front/css/blog.css
+++ b/resources/assets/front/css/blog.css
@@ -5,7 +5,7 @@
 }
 .blog-element {
     width: 30%;
-    height: 330px;
+    height: 400px;
     margin: 0px 1.5%;
 }
 .previe {
@@ -15,10 +15,12 @@
 .previe > a {
     width: 100%;
     height: 210px;
-    display: block;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+    border-radius: 10px;
 }
 .previe > a > img {
-    width: 100%;
     height: 100%;
     border-radius: 10px;
 }
@@ -66,7 +68,6 @@ figure.table > table {
     height: 335px;
 }
 .post-image > img {
-    width: 100%;
     height: 100%;
     border-radius: 10px;
 }
