--- a/resources/assets/front/css/categories.css
+++ b/resources/assets/front/css/categories.css
@@ -39,11 +39,13 @@
     position: absolute;
     height: 100%;
     width: 80%;
-    padding: 20px 0px 0px 80px;
+    padding: 0px 0px 0px 80px;
     left: 0;
     top: 0;
     text-decoration: none;
     color: rgba(50, 50, 50, 1);
+    display: flex;
+    align-items: center;
 }
 .category_elem > p > a:hover {
     text-decoration: none;
